# guile-wayland

./: .dir-locals.el  .gitignore  .guix-channel  AUTHORS  Makefile.am  README  README.org  TODO  config.h.in  configure.ac  guix.scm  pre-inst-env.in  repl.scm  repl.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
.guix/modules/: guile-wayland-package.scm
build-aux/: wayland-scanner-guile.in
example/: wl-client-1.scm  wl-client-1.scm.in  wl-client-2.scm  wl-client-2.scm.in  wl-client-3.scm  wl-client-3.scm.in  wl-server-1.scm  wl-server-1.scm.in
examples/: Makefile.am  wl-client-1.scm.in  wl-server-1.scm.in
libguile-wayland/: Makefile.am
libguile-wayland/server/: listener.c
lisp/: wayland.scm
lisp/wayland/: Makefile.am  argument.scm  base.scm  callback.scm  client-core.scm  client.scm  compositor.scm  config.scm.in  cursor.scm  display.scm  event-loop.scm  global.scm  interface.c  interface.scm  list.scm  listener.c  listener.scm  mman.c  mman.scm  output.scm  pointer.scm  proxy.scm  registry.scm  resource.scm  scanner.scm  shm.scm  signal.c  signal.scm  util.scm
lisp/wayland/client/: display.scm
lisp/wayland/client/protocol/: xdg-shell.scm
lisp/wayland/server/: client.scm  display.scm  listener.scm
lisp/wayland/server/protocol/: wayland.scm
modules/wayland/: Makefile.am  config.scm.in  event-loop.scm  interface.scm  list.scm  proxy.scm  scanner.scm  shm.scm  signal.scm  util.scm
modules/wayland/client/: display.scm  proxy.scm
modules/wayland/client/protocol/: viewporter.scm  wayland.scm  xdg-shell.scm
modules/wayland/server/: client.scm  display.scm  event-loop.scm  global.scm  listener.scm  resource.scm
src/: Makefile.am  w-s.c  w.c
tests/: display.scm  list.scm  scanner.scm
